--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="com.rashan.photoapplication.ui.overview.viewmodel.OverviewViewModel" />
@@ -24,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:adapter="@{adapter}"
-            app:adapterPhotoList="@{vm.photoListLiveData}"
+            app:adapter_photo_list="@{vm.photoListLiveData}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
         <ProgressBar
@@ -32,25 +33,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            app:loading="@{vm.isLoading}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:visibile="@{vm.isLoading}"
             tools:visibility="visible" />
 
         <Button
             android:id="@+id/retry_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="@{()->vm.fetchPhotoList()}"
             android:text="Retry"
             android:visibility="gone"
-            android:onClick="@{()->vm.fetchPhotoList()}"
-            app:retry_allowed="@{vm.isRetryAllowed}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:visibile="@{vm.isRetryAllowed}" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
