--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,12 +5,105 @@
 
     <data>
 
+        <variable
+            name="vm"
+            type="com.rashan.photoapplication.ui.detail.viewmodel.DetailViewModel" />
+
+        <variable
+            name="photo"
+            type="com.rashan.photoapplication.model.domain.Photo" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="8dp"
         tools:context=".ui.detail.activity.DetailActivity">
+
+        <ImageView
+            android:id="@+id/photo_imageview"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:set_image_url="@{photo.downloadUrl}"
+            tools:src="@drawable/ic_launcher_background" />
+
+        <ImageView
+            android:id="@+id/favourite_imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/ic_baseline_favorite_24"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/photo_imageview"
+            app:visibile="@{photo.isFavourite}"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/photographer_name_textview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:text="@{String.format(@string/photographer_name, photo.author)}"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@+id/photo_imageview"
+            tools:text="Name: Rashanjyot Singh" />
+
+        <TextView
+            android:id="@+id/photo_width_textview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:text="@{String.format(@string/photo_width, photo.width)}"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@+id/photographer_name_textview"
+            tools:text="Width: 1024" />
+
+        <TextView
+            android:id="@+id/photo_height_textview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:text="@{String.format(@string/photo_height, photo.height)}"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@+id/photo_width_textview"
+            tools:text="Height: 720" />
+
+        <TextView
+            android:id="@+id/photo_unsplash_url_textview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:text="@{String.format(@string/unsplash_url, photo.url)}"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@+id/photo_height_textview"
+            tools:text="Unsplash url: https://google.com" />
+
+        <TextView
+            android:id="@+id/photo_download_url_textview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:text="@{String.format(@string/download_url, photo.downloadUrl)}"
+            android:textSize="16sp"
+            app:layout_constraintTop_toBottomOf="@+id/photo_unsplash_url_textview"
+            tools:text="Download url: https://abc.com" />
+
+        <Button
+            android:id="@+id/open_unsplash_url_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Open Unsplash URL"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/photo_download_url_textview" />
+
+        <Button
+            android:id="@+id/download_photo_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Download Photo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/open_unsplash_url_button" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
