--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -9,10 +9,6 @@
             name="vm"
             type="com.rashan.photoapplication.ui.detail.viewmodel.DetailViewModel" />
 
-        <variable
-            name="photo"
-            type="com.rashan.photoapplication.model.domain.Photo" />
-
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:set_image_url="@{photo.downloadUrl}"
+            app:set_image_url="@{vm.photoLiveData.downloadUrl}"
             tools:src="@drawable/ic_launcher_background" />
 
         <ImageView
@@ -38,14 +34,14 @@
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/photo_imageview"
-            app:visibile="@{photo.isFavourite}"
+            app:visibile="@{vm.photoLiveData.isFavourite}"
             tools:visibility="visible" />
 
         <TextView
             android:id="@+id/photographer_name_textview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="@{String.format(@string/photographer_name, photo.author)}"
+            android:text="@{String.format(@string/photographer_name, vm.photoLiveData.author)}"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/photo_imageview"
             tools:text="Name: Rashanjyot Singh" />
@@ -54,7 +50,7 @@
             android:id="@+id/photo_width_textview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="@{String.format(@string/photo_width, photo.width)}"
+            android:text="@{String.format(@string/photo_width, vm.photoLiveData.width)}"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/photographer_name_textview"
             tools:text="Width: 1024" />
@@ -63,7 +59,7 @@
             android:id="@+id/photo_height_textview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="@{String.format(@string/photo_height, photo.height)}"
+            android:text="@{String.format(@string/photo_height, vm.photoLiveData.height)}"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/photo_width_textview"
             tools:text="Height: 720" />
@@ -72,7 +68,7 @@
             android:id="@+id/photo_unsplash_url_textview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="@{String.format(@string/unsplash_url, photo.url)}"
+            android:text="@{String.format(@string/unsplash_url, vm.photoLiveData.url)}"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/photo_height_textview"
             tools:text="Unsplash url: https://google.com" />
@@ -81,7 +77,7 @@
             android:id="@+id/photo_download_url_textview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="@{String.format(@string/download_url, photo.downloadUrl)}"
+            android:text="@{String.format(@string/download_url, vm.photoLiveData.downloadUrl)}"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/photo_unsplash_url_textview"
             tools:text="Download url: https://abc.com" />
