--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -40,7 +40,7 @@
             app:layout_constraintTop_toBottomOf="@+id/favourite_switch" />
 
         <ProgressBar
-            android:id="@+id/progress_circular"
+            android:id="@+id/progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
